# ripget

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: python-publish.yml
python/: .gitignore  Cargo.toml  README.md  pyproject.toml  ripget.pyi
python/src/: lib.rs
src/: lib.rs  main.rs
