[package]
name = "ripget"
version = "0.1.0"
edition = "2024"
description = "Fast multi-part downloader with retries, progress, and configurable parallelism."
readme = "README.md"
repository = "https://github.com/sam0x17/ripget"
homepage = "https://github.com/sam0x17/ripget"
documentation = "https://docs.rs/ripget"
keywords = ["download", "downloader", "http", "async", "cli"]
categories = ["command-line-utilities", "network-programming"]
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4", features = ["derive"] }
futures-util = "0"
indicatif = "0"
log = "0"
reqwest = { version = "0", default-features = false, features = ["rustls-tls", "stream"] }
thiserror = "1"
tokio = { version = "1", features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0", features = ["io"] }
env_logger = "0"

[dev-dependencies]
hyper = { version = "0", features = ["full"] }
tempfile = "3"
